--- a/Micronauts/Micronauts.html
+++ b/Micronauts/Micronauts.html
@@ -2,13 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Micronauts</title>
 </head>
 <body>
 <img src="MicronautsToys.jpg">
 <p>
-Micronauts was a North American science fiction toyline manufactured and marketed by Mego from 1976 to 1980. The Micronauts toyline was based on and licensed from the Microman toyline created by Japanese-based toy company Takara in 1974.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Micronauts01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Micronauts12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Micronauts was a North American science fiction toyline manufactured and marketed by Mego from 1976 to 1980. The Micronauts toyline was based on and licensed from the Microman toyline created by Japanese-based toy company Takara in 1974. The comic book series ran 79 issues from 1979-1986 by Marvel and moved to IDW in 2016.
 </p><p>
 Mego discontinued the Micronauts line in 1980 prior to the company’s bankruptcy and dissolution in 1982. Years after Mego’s demise other toy companies, such as Palisades Toys and SOTA (State of the Art) Toys, have attempted to revive the toyline over the years.
 </p><p>
@@ -18,11 +44,9 @@ On December 18, 2017, The Hollywood Reporter announced that Paramount has schedu
 </p><p>
 Several comic book series based on the Micronaut toyline have been published by Marvel Comics (1979–1986), Image Comics (2002–2003), Devil’s Due Publishing (2004) as well as IDW (2016).
 </p><p>
-<img src="Micronauts01.jpg"> <br>
-Series: 59 issues 1979-1984<br>
-Publisher: Marvel<br>
+Issue #1 "Homeworld!", Commander Rann returns from his 1000 year space voyage to find that the Warp Drive has been invented, which has allowed Baron Karza to take over the Microverse while he slept in suspended animation. Rann is captured and sent to the Pleasure Pits where his escape is orchestrated by the others, including those who would become members of the Micronauts. 
 </p><p>
-"Homeworld!", Commander Rann returns from his 1000 year space voyage to find that the Warp Drive has been invented, which has allowed Baron Karza to take over the Microverse while he slept in suspended animation. Rann is captured and sent to the Pleasure Pits where his escape is orchestrated by the others, including those who would become members of the Micronauts. Characters: Micronauts (intro) [Commander Arcturus Rann [Space Glider]; Marionette [Princess Mari]; Biotron; Microtron; Acroyear; Bug]; Baron Karza (Villain); Prince Argon; Acroyear Warriors; Dog Soldiers; Oberon (Prince Argon's Horse); Time Traveler; Prince Shaitan (Acroyear Warrior); Shadow Priest; Endeavor (Rann's spaceship). Written by Bill Mantlo, with art by Michael Golden and Joe Rubinstein. Cover by Dave Cockrum and Al Milgrom.
+Characters: Micronauts (intro) [Commander Arcturus Rann [Space Glider]; Marionette [Princess Mari]; Biotron; Microtron; Acroyear; Bug]; Baron Karza (Villain); Prince Argon; Acroyear Warriors; Dog Soldiers; Oberon (Prince Argon's Horse); Time Traveler; Prince Shaitan (Acroyear Warrior); Shadow Priest; Endeavor (Rann's spaceship). Written by Bill Mantlo, with art by Michael Golden and Joe Rubinstein. Cover by Dave Cockrum and Al Milgrom.
 </p>
 </body>
 </html>
