--- a/Prowler/Prowler.html
+++ b/Prowler/Prowler.html
@@ -8,13 +8,9 @@
 </head>
 
 <body>
-<img src="Prowler1987.jpg"> <br>
-Series: 1 issue 1987, 1 issue <br>
-Publisher: Eclipse, Marvel<br>
+<img src="Prowler1994.jpg">
 <p>
-The Prowler was a comic created by Timothy Truman and John K. Snyder III for Eclipse Comics. Two four-issue color miniseries, a black and white one-shot and a one-shot crossover with Airboy were published in 1987-1988. The comic concerned a manipulative elderly hero, in the manner of The Shadow.
-</p><p>
-Another unrelated Prowler appeared in Marvel Comics and by 1994 appeared in his own title. Several characters (such as the anti-hero Hobart "Hobie" Brown and the career criminal Aaron Davis) have taken up the Prowler identity all while being an acquaintance to Spider-Man.
+The Prowler appeared in Marvel Comics for awhile and by 1994 appeared in his own title. Several characters (such as the anti-hero Hobart "Hobie" Brown and the career criminal Aaron Davis) have taken up the Prowler identity all while being an acquaintance to Spider-Man.
 </p><p>
 Hobie Brown has appeared in various animations and video games. Aaron Davis makes his live action debut in Spider-Man: Homecoming portrayed by Donald Glover.
 </p><p>
@@ -26,7 +22,6 @@ Hobie Brown has appeared in various animations and video games. Aaron Davis make
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Prowler1987.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Prowler1994.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Prowler2016.jpg"></div>
 
