--- a/index.html
+++ b/index.html
@@ -69145,7 +69145,7 @@
 <td>Silver Surfer Warlock Resurrection</td>
 <td>1993</td>
 <td>Marvel</td>
-<td><a href="SilversurferWarlock/SilversurferWarlock.html">Details</a></td>
+<td><a href="SilversurferWarlock/SilverSurferWarlock.html">Details</a></td>
 </tr>
 
 <tr>
@@ -71194,14 +71194,14 @@
 <tr>
 <td>S.R. Bissette’s SpiderBaby Comix</td>
 <td>1996</td>
-<td>Spiderbaby Graphix</td>
+<td>Spiderbaby Grafix</td>
 <td><a href="SteveBissette/SteveBissette.html">Details</a></td>
 </tr>
 
 <tr>
 <td>S.R. Bissette’s Tyrant</td>
 <td>1994</td>
-<td>Spiderbaby Graphix</td>
+<td>Spiderbaby Grafix</td>
 <td><a href="SteveBissette/SteveBissette.html">Details</a></td>
 </tr>
 
@@ -73924,8 +73924,8 @@
 <tr>
 <td>Surviving Saskatoon</td>
 <td>2000</td>
-<td>Marvel</td>
-<td><a href="Supernaturals/Supernaturals.html">Details</a></td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
 <tr>
@@ -75611,8 +75611,8 @@
 <tr>
 <td>Thirteen Going On Eighteen</td>
 <td>2010</td>
-<td>Marvel</td>
-<td><a href="Supernaturals/Supernaturals.html">Details</a></td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
 <tr>
@@ -82133,7 +82133,7 @@
 <td>Willow</td>
 <td>1988</td>
 <td>Marvel</td>
-<td><a href="Willow/Willow.html">Details</a></td>
+<td><a href="Willow/WillowMovie.html">Details</a></td>
 </tr>
 
 <tr>
