Comics about comics

--- a/AbramsBooks/AbramsBooks.html
+++ b/AbramsBooks/AbramsBooks.html
@@ -25,7 +25,7 @@
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Kirby.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../KirbyKingOfComics/KirbyKingOfComics1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AbramsBooks10.jpg"></div>
@@ -142,7 +142,7 @@ Titles
 <li><a href="AbramsBooks35.jpg">Irmina</a>	(2016)
 <li><a href="AbramsBooks36.jpg">Johnny Cash: I See a Darkness</a>	(2009)
 <li><a href="AbramsBooks37.jpg">Just So Happens</a> (2015)
-<li><a href="Kirby.jpg">Kirby: King of Comics</a> (2008)
+<li><a href="../KirbyKingOfComics/KirbyKingOfComics.html">Kirby: King of Comics</a> (2008)
 <li><a href="AbramsBooks38.jpg">Krazy Kat: The Comic Art of George Herriman</a> (1986)
 <li><a href="AbramsBooks39.jpg">Laugh-Out-Loud Cats Sell Out</a> (2009)
 <li><a href="AbramsBooks40.jpg">Manga Shakespeare Romeo and Juliet</a> (2007)
