--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -199,113 +199,98 @@ Previous Titles
 <li><a href="../Batman/Batman.html">Batman</a> (1939) 	 	
 <li><a href="DC66.jpg">Batman And The Outsiders</a> (1983) 	 	
 <li><a href="../BatmanTheDarkKnight/BatmanTheDarkKnight.html">Batman The Dark Knight Returns</a> (1986) 	 	
-<li><a href="../BatmanTheKillingJoke/BatmanTheKillingJoke.html">Batman The Killing Joke</a> (1988) 	 	
+<li><a href="../BatmanTheKillingJoke/BatmanTheKillingJoke.html">Batman The Killing Joke</a> (1988)
 <li><a href="../BatmanVsPredatorII/BatmanVsPredatorII.html">Batman versus Predator II</a> (1992)
-<li><a href="../BatmanYearOne/BatmanYearOne.html">Batman Year One</a> (1987) 	 	
-<li><a href="../Batwoman/Batwoman.html">Batwoman</a> (1993) 	 	
-<li><a href="../BewareTheCreeper/BewareTheCreeper.html">Beware The Creeper</a> (1968) 	 	
-<li><a href="../BirdsOfPrey/BirdsOfPrey.html">Birds Of Prey</a> (1999) 	 	
-<li><a href="../BlackCanary/BlackCanary.html">Black Canary</a> (1947) 	 	
-<li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1938) 	 	
-<li><a href="../BoyCommandos/BoyCommandos.html">Boy Commandos</a> (1942) 	 	
-<li>Brave And The Bold 	1955 	 	
-<li>Camelot 3000 	1985 	 	
-<li>Catwoman 	1972 	 	
-<li>Cave Carson 	2016 	 	
-<li>Challengers Of The Unknown 	1958 	 	
-<li>Chase 	1998 	 	
-<li>Cosmic Odyssey 	1988 	 	
-<li>Crisis On Infinite Earths 	1985 	 	
-<li>DC vs. Marvel 	1996 	 	
-<li>Daredevil And Batman 	1997 	 	
-<li>Dark Knight Returns 	1986 	 	
-<li>DC: The New Frontier 	2004 	 	
-<li>Deadman 	1985 	 	
-<li>Deathstroke 	1991 	 	
-<li>Demon 	1972 	 	
-<li>Desolation Jones 	2005 	 	
-<li>Detective Comics 	1937 	 	
-<li>Doctor Fate 	1940 	 	
-<li>Doom Patrol 	2017 	 	
-<li>Doorway to Nightmare 	1978 	 	
-<li>Flash 	1959 	 	
-<li>Flash Rebirth 	2009 	 	
-<li>Flex Mentallo 	1996 	 	
-<li>Forever People 	1971 	 	
-<li>Funny Stuff 	1944 	 	
-<li>Ghosts 	1971 	 	
-<li>Gotham Academy 	2015 	 	
-<li>Gotham Central 	2003 	 	
-<li>Grayson 	2017 	 	
-<li>Green Arrow 	1941 	 	
-<li>Green Lantern 	1941 	 	
-<li>Gregory 	1989 	 	
-<li>Halo Jones 	2005 	 	
-<li>Harley Quinn 	2016 	 	
-<li>Hawkman 	1964 	 	
-<li>History Of Violence 	2005 	 	
-<li>Hitman 	2005 	 	
-<li>House Of Mystery 	1951 	 	
-<li>House Of Secrets 	1956 	 	
-<li>House Of Whispers 	2018 	 	
-<li>Injustice 	2013 	 	
-<li>JLA 	1997 	 	
-<li>Jonah Hex 	1977 	 	
-<li>Justice League 	2018 	 	
-<li>Justice League Dark 	2018 	 	
-<li>Justice League Odyssey 	2018 	 	
-<li>Justice League Of America 	1960 	 	
-<li>Kamandi 	1972 	 	
-<li>Killing Joke 	1988 	 	
-<li>Kingdom Come 	1996 	 	
-<li>Legion Of Super-Heroes 	1973 	 	
-<li>Lobo 	1993 	 	
-<li>Mad Magazine 	2018 	 	
-<li>Metal Men 	1963 	 	
-<li>Midnighter 	2007 	 	
-<li>Mister Miracle 	1971 	 	
-<li>Multiversity 	2014 	 	
-<li>New Gods 	1971 	
-<li><a href="DC67.jpg">New York's World Fair Comics</a> (1939)
-<li>Nightwing 	2016 	 	
-<li>Omega Men 	1983 	 	
-<li>Orion 	2000 	 	
-<li>Planetary 	1999 	 	
-<li>Psycho 	1991 	 	
-<li>Red Hood And The Outlaws 	2016 	 	
-<li>Ronin 	1983 	 	
-<li>Saga Of The Swamp Thing 	1982 	 	
-<li>Scribbly 	1948 	 	
-<li>Scribbly 	1948 	 	
-<li>Sea Devils 	1961 	 	
-<li>Sensation Comics 	1942 	 	
-<li>Sgt. Rock 	1977 	 	
-<li>Shade The Changing Girl 	2017 	 	
-<li>Shade The Changing Man 	1977 	 	
-<li>Shazam! 	2018 	 	
-<li>Spectre 	1940 	 	
-<li>Starman 	1988 	 	
-<li>Strange Adventures 	1950 	 	
-<li>Sugar And Spike 	1956 	 	
-<li>Suicide Squad 	1987 	 	
-<li>Supergirl 	2016 	 	
-<li>Superman 	1933 	 	
-<li>Swamp Thing 	1982 	 	
-<li>Tales Of The Unexpected 	1956 	 	
-<li>Teen Titans 	1966 	 	
-<li>Terrifics 	2018 	 	
-<li>Tor 	1975 	 	
-<li>Trillium 	2013 	 	
-<li>Unexpected 	1968 	 	
-<li>Vigilante 	1983 	 	
-<li>Warlord 	1976 	 	
-<li>Wasteland 	1987 	 	
-<li>Watchmen 	1986 	 	
-<li>Weird War Tales 	1971 	 	
-<li>Wild Storm 	2017 	 	
-<li>Witching Hour 	1969 	 	
-<li>Wonder Woman 	1942 	 	
-<li>Zatanna 	1993 	 	
+<li><a href="../BatmanYearOne/BatmanYearOne.html">Batman Year One</a> (1987)
+<li><a href="../Batwoman/Batwoman.html">Batwoman</a> (1993)
+<li><a href="../BewareTheCreeper/BewareTheCreeper.html">Beware The Creeper</a> (1968)
+<li><a href="../BirdsOfPrey/BirdsOfPrey.html">Birds Of Prey</a> (1999)
+<li><a href="../BlackCanary/BlackCanary.html">Black Canary</a> (1947)
+<li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1938)
+<li><a href="../BoyCommandos/BoyCommandos.html">Boy Commandos</a> (1942)
+<li><a href="../BraveAndTheBold/BraveAndTheBold.html">Brave And The Bold</a> (1955)
+<li><a href="../Camelot3000/Camelot3000.html">Camelot 3000</a> (1985)
+<li><a href="../CatWoman/CatWoman.html">Catwoman</a> (1972)	
+<li><a href="../CaveCarson/CaveCarson.html">Cave Carson</a> (2016)
+<li><a href="../ChallengersOfTheUnknown/ChallengersOfTheUnknown.html">Challengers Of The Unknown</a> (1958)
+<li><a href="../Chase/Chase.html">Chase</a> (1998)
+<li><a href="../CosmicOdyssey/CosmicOdyssey.html">Cosmic Odyssey</a> (1988)
+<li><a href="../CrisisOnInfiniteEarths/CrisisOnInfiniteEarths.html">Crisis On Infinite Earths</a> (1985)
+<li><a href="../MarvelVsDC/MarvelVsDC.html">DC vs. Marvel</a> (1996)
+<li><a href="../DaredevilBatman/DaredevilBatman.html">Daredevil And Batman</a> (1997)
+<li><a href="../DarkKnightReturns/DarkKnightReturns.html">Dark Knight Returns</a> (1986)
+<li><a href="../DCNewFrontier/DCNewFrontier.html">DC: The New Frontier</a> (2004) 	 	
+<li><a href="../Deadman/Deadman.html">Deadman</a> (1985) 	 	
+<li><a href="../Deathstroke/Deathstroke.html">Deathstroke</a> (1991) 	 	
+<li><a href="../Demon/Demon.html">Demon</a> (1972) 	 	
+<li><a href="../DesolationJones/DesolationJones.html">Desolation Jones</a> (2005)
+<li><a href="../DetectiveComics/DetectiveComics.html">Detective Comics</a> (1937)
+<li><a href="../DoctorFate/DoctorFate.html">Doctor Fate</a> (1940) 	 	
+<li><a href="../DoomPatrol/DoomPatrol.html">Doom Patrol</a> 2017 	 	
+<li><a href="../DoorwayToNightmare/DoorwayToNightmare.html">Doorway to Nightmare</a> (1978) 	 	
+<li><a href="../DCComics/DCComics.html">Flash</a> (1959) 	 	
+<li><a href="../FlashRebirth/FlashRebirth.html">Flash Rebirth</a> (2009) 	 	
+<li><a href="../FlexMentallo/FlexMentallo.html">Flex Mentallo</a> (1996) 	 	
+<li><a href="../ForeverPeople/ForeverPeople.html">Forever People</a> (1971)
+<li><a href="../FunnyStuff/FunnyStuff.html">Funny Stuff</a> (1944)
+<li><a href="../Ghosts/Ghosts.html">Ghosts</a> (1971) 	 	
+<li><a href="../GothamAcademy/GothamAcademy.html">Gotham Academy</a> (2015)
+<li><a href="../GothamCentral/GothamCentral.html">Gotham Central</a> (2003)
+<li><a href="../Grayson/Grayson.html">Grayson</a> (2017)
+<li><a href="../GreenArrow/GreenArrow.html">Green Arrow</a> (1941)
+<li><a href="../GreenLantern/GreenLantern.html">Green Lantern</a> (1941)
+<li><a href="../Gregory/Gregory.html">Gregory</a> (1989) 	 	
+<li><a href="../BalladOfHaloJones/BalladOfHaloJones.html">Halo Jones</a> (2005)
+<li><a href="../Hawkman/Hawkman.html">Hawkman</a> (1964) 	 	
+<li><a href="../HistoryOfViolence/HistoryOfViolence.html">History Of Violence</a> (2005) 	 	
+<li><a href="../HitmanDC/HitmanDC.html">Hitman</a> (2005) 	 	
+<li><a href="../HouseOfMystery/HouseOfMystery.html">House Of Mystery</a> (1951) 	 	
+<li><a href="../HouseOfSecrets/HouseOfSecrets.html">House Of Secrets</a> (1956)
+<li><a href="../Injustice/Injustice.html">Injustice</a> (2013)
+<li><a href="../JLA/JLA.html">JLA</a> (1997) 	 	
+<li><a href="../JonahHex/JonahHex.html">Jonah Hex</a> (1977)	 	
+<li><a href="../JusticeLeagueOfAmerica/JusticeLeagueOfAmerica.html">Justice League Of America</a> (1960)
+<li><a href="../Kamandi/Kamandi.html">Kamandi</a> (1972) 	 	
+<li><a href="../BatmanTheKillingJoke/BatmanTheKillingJoke.html">Killing Joke</a> (1988)
+<li><a href="../KingdomCome/KingdomCome.html">Kingdom Come</a> 	1996 	 	
+<li><a href="../LegionOfSuperHeroes/LegionOfSuperHeroes.html">Legion Of Super-Heroes</a> 	1973 	 	
+<li><a href="../Lobo/Lobo.html">Lobo</a> 	1993 	 		 	
+<li><a href="../MetalMen/MetalMen.html">Metal Men</a> 	1963 	 	
+<li><a href="../Midnighter/Midnighter.html">Midnighter</a> 	2007 	 	
+<li><a href="../MisterMiracle/MisterMiracle.html">Mister Miracle</a> 	1971 	 	
+<li><a href="../Multiversity/Multiversity.html">Multiversity</a> 2014 	 	
+<li><a href="../NewGods/NewGods.html">New Gods</a> (1971) 	
+<li><a href="DC67.jpg">New York's World Fair Comics</a> (1939)	 	
+<li><a href="../OmegaMen/OmegaMen.html">Omega Men</a> 	1983 	 	
+<li><a href="../Orion2000/Orion2000.html">Orion</a>	2000 	 	
+<li><a href="../Planetary/Planetary.html">Planetary</a> 	1999 	 	
+<li><a href="../PsychoDC/PsychoDC.html">Psycho</a> 	1991	 	
+<li><a href="../Ronin/Ronin.html">Ronin</a>	1983 	 	
+<li><a href="../SwampThing/SwampThing.html">Saga Of The Swamp Thing</a>	1982 	 	
+<li><a href="../Scribbly/Scribbly.html">Scribbly</a> 1948 	
+<li><a href="../SeaDevils/SeaDevils.html">Sea Devils</a> 1961 	 	
+<li><a href="../SensationComics/SensationComics.html">Sensation Comics</a> 	1942 	 	
+<li><a href="../SgtRock/SgtRock.html">Sgt. Rock</a> (1977) 	 		 	
+<li><a href="../Shade/Shade.html">Shade The Changing Man</a> 	1977 	 		 	
+<li><a href="../Spectre/Spectre.html">Spectre</a> (1940) 	 	
+<li><a href="../Starman/Starman.html">Starman</a> 	1988 	 	
+<li><a href="../StrangeAdventures/StrangeAdventures.html">Strange Adventures</a> 1950
+<li><a href="../SugarAndSpike/SugarAndSpike.html">Sugar And Spike</a> 	1956 	 	
+<li><a href="../SuicideSquad/SuicideSquad.html">Suicide Squad</a> 1987 	 	 	 	
+<li><a href="../Superman/Superman.html">Superman</a> 1933 	 	
+<li><a href="../SwampThing/SwampThing.html">Swamp Thing</a>	1982 	 	
+<li><a href="../Unexpected/Unexpected.html">Tales Of The Unexpected</a> 	1956 	 	
+<li><a href="../TeenTitans/TeenTitans.html">Teen Titans</a> 	1966 	 		 	
+<li><a href="../Tor/Tor.html">Tor</a> 	1975 	 		 	
+<li><a href="../Unexpected/Unexpected.html">Unexpected</a> 	1968 	 	
+<li><a href="../Vigilante/Vigilante.html">Vigilante</a> 1983 	 	
+<li><a href="../Warlord/Warlord.html">Warlord</a> 	1976 	 	
+<li><a href="../Wasteland/Wasteland.html">Wasteland</a> 	1987 	 	
+<li><a href="../Watchmen/watchmen.html">Watchmen</a> 	1986 	 	
+<li><a href="../WeirdWarTales/WeirdWarTales.html">Weird War Tales</a> 	1971
+<li><a href="../WitchingHour/WitchingHour.html">Witching Hour</a> 	1969 	 	
+<li><a href="../WonderWoman/WonderWoman.html">Wonder Woman</a> 	1942 	 	
+<li><a href="../Zatanna/Zatanna.html">Zatanna</a> (1993) 	 	
 
 </p>
 </body>
