--- a/index.html
+++ b/index.html
@@ -4431,6 +4431,13 @@
 </tr>
 
 <tr>
+<td>All In Color For A Dime</td>
+<td>1970</td>
+<td>Arlington House</td>
+<td><a href="AllInColorForADime/AllInColorForADime.html">Details</a></td>
+</tr>
+
+<tr>
 <td>All My Darling Daughters</td>
 <td>2010</td>
 <td>Viz</td>
@@ -20092,10 +20099,24 @@
 </tr>
 
 <tr>
+<td>Comics A Global History</td>
+<td>2014</td>
+<td>Thames &amp; Hudson</td>
+<td><a href="ComicsAGlobalHistory/ComicsAGlobalHistory.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics About Cartoonists: Stories About The World's Oddest Profession</td>
 <td>2012</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics And Sequential Art</td>
+<td>1985</td>
+<td>Poorhouse Press</td>
+<td><a href="ComicsSequentialArt/ComicsSequentialArt.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20229,6 +20250,13 @@
 <td>1975</td>
 <td>Warren</td>
 <td><a href="ComixInternational/ComixInternational.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comix: A History of Comic Books in America</td>
+<td>1971</td>
+<td>Outerbridge &amp; Dienstfrey</td>
+<td><a href="ComixAHistory/ComixAHistory.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31466,6 +31494,13 @@
 <td>2018</td>
 <td>Image</td>
 <td><a href="Farmhand/Farmhand.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Farrar Straus Giroux Books</td>
+<td>1946</td>
+<td>Publisher</td>
+<td><a href="FarrarStrausGiroux/FarrarStrausGiroux.html">Details</a></td>
 </tr>
 
 <tr>
@@ -46616,7 +46651,7 @@
 <td>Kirby: King Of Comics</td>
 <td>2008</td>
 <td>Abrams</td>
-<td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+<td><a href="KirbyKingOfComics/KirbyKingOfComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50835,6 +50870,13 @@
 
 <tr>
 <td>Making Comics</td>
+<td>2006</td>
+<td>Harper Collins</td>
+<td><a href="ScottMcCloud/ScottMcCloud.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Making Comics</td>
 <td>2009</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
@@ -52128,6 +52170,14 @@
 <td><a href="Innovation/Innovation.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>Masters Of American Comics</td>
+<td>2005</td>
+<td>Yale University Press</td>
+<td><a href="YaleUniversityPress/YaleUniversityPress.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Masters Of Horror</td>
 <td>2005</td>
@@ -52709,9 +52759,16 @@
 
 <tr>
 <td>Men In Black</td>
-<td>19891</td>
+<td>1989</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Men Of Tomorrow</td>
+<td>2008</td>
+<td>Basic Books</td>
+<td><a href="MenOfTomorrow/MenOfTomorrow.html">Details</a></td>
 </tr>
 
 <tr>
@@ -64006,6 +64063,13 @@
 </tr>
 
 <tr>
+<td>Reinventing Comics</td>
+<td>2000</td>
+<td>Harper Collins</td>
+<td><a href="ScottMcCloud/ScottMcCloud.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Relay</td>
 <td>2018</td>
 <td>Aftershock</td>
@@ -72277,6 +72341,13 @@
 </tr>
 
 <tr>
+<td>Steranko History of Comics</td>
+<td>1970</td>
+<td>Supergraphics</td>
+<td><a href="SterankoHistoryOfComics/SterankoHistoryOfComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Steve Bissette</td>
 <td>1952</td>
 <td>Creator</td>
@@ -75081,6 +75152,13 @@
 <td>1990</td>
 <td>MU Press</td>
 <td><a href="MUPress/MUPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ten Cent Plague</a>
+<td>2009</td>
+<td>Picador</td>
+<td><a href="TenCentPlague/TenCentPlague.html">Details</a></td>
 </tr>
 
 <tr>
