--- a/Macmillan/Macmillan.html
+++ b/Macmillan/Macmillan.html
@@ -19,7 +19,23 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Macmillan1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="Macmillan2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Macmillan18.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -30,24 +46,23 @@
 Titles
 </p><p>
 <li><a href="Macmillan1.jpg">Agent Moose</a>  	2020
-<li>American Born Chinese 	2008
-<li>Anya's Ghost  	2014
-<li>Back to the Bleachers  	1996
-<li>Cats Are People, Too: A Collection of Cat Cartoons to Curl up With  	2020
-<li>Comics  	1947
-<li>Encyclopedia of Comic Book Heroes  	1976
-<li>Four Points  	2016
-<li>Herblock: A Cartoonist's Life  	1993
-<li>In Real Life  	2018
-<li>New Comics Anthology  	1991
-<li>Penguin Soup for the Soul 	1998
-<li>Primates  	2015
-<li>Revolution in the Bleachers 	1991
-<li>Sorry, Lady -- This Beach Is Private!  	1963
-<li>Space Pirate Sardine vs. the Brainwashing Machine 	2008
-<li>Tragedy Series: Secret Lobster Claws and Other Misfortunes  	2015
-<li>Whodunit  	1981
-<li>Wires and Nerve  	2017
+<li><a href="Macmillan2.jpg">American Born Chinese</a> 	2008
+<li><a href="Macmillan3.jpg">Anya's Ghost</a>  	2014
+<li><a href="Macmillan4.jpg">Back to the Bleachers </a> 	1996
+<li><a href="Macmillan5.jpg">Cats Are People, Too: A Collection of Cat Cartoons to Curl up With</a> 	2020
+<li><a href="Macmillan6.jpg">Comics</a>  	1947
+<li><a href="Macmillan7.jpg">Encyclopedia of Comic Book Heroes</a>  	1976
+<li><a href="Macmillan8.jpg">Four Points</a>  	2016
+<li><a href="Macmillan9.jpg">Herblock: A Cartoonist's Life</a>  	1993
+<li><a href="Macmillan10.jpg">In Real Life</a>  	2018
+<li><a href="Macmillan11.jpg">New Comics Anthology</a>  	1991
+<li><a href="Macmillan12.jpg">Penguin Soup for the Soul</a> 	1998
+<li><a href="Macmillan13.jpg">Primates</a>  	2015
+<li><a href="Macmillan14.jpg">Revolution in the Bleachers</a> 	1991
+<li><a href="Macmillan15.jpg">Sorry, Lady -- This Beach Is Private!</a>  	1963
+<li><a href="Macmillan16.jpg">Space Pirate Sardine vs. the Brainwashing Machine </a>	2008
+<li><a href="Macmillan17.jpg">Tragedy Series: Secret Lobster Claws and Other Misfortunes </a> 	2015
+<li><a href="Macmillan18.jpg">Wires and Nerve</a>  	2017
 </p>
 
 </body>
