comics and sequential art

--- a/RandomHouse/RandomHouse.html
+++ b/RandomHouse/RandomHouse.html
@@ -159,7 +159,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Random House has merged with Pengiun, Ballantine, Crown, Bantam, Doubleday, <a href="../Dell/Dell.html">Dell</a>, Knopf,  Bertelsmann, Pearson, and <a href="../NewAmericanLibrary/NewAmericanLibrary.html">New American Library</a>. It is one of the Big Six English-language publishing companies, alongside <a href="https://www.grandcentralpublishing.com/">Grand Central</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a> and <a href="../SimonSchuster/SimonSchuster.html">Simon & Schuster</a>.
+Random House has merged with Pengiun, Ballantine, Crown, Bantam, Doubleday, <a href="../Dell/Dell.html">Dell</a>, Knopf,  Bertelsmann, Pearson, and <a href="../NewAmericanLibrary/NewAmericanLibrary.html">New American Library</a>. It is one of the Big Six English-language publishing companies, alongside <a href="../WarnerBooks/WarnerBooks.html">Grand Central (Warner Books)</a>, <a href="../HarperCollins/HarperCollins.html">Harper Collins</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a> and <a href="../SimonSchuster/SimonSchuster.html">Simon & Schuster</a>.
 </p><p>
 <a href="http://www.randomhouse.com">Random House</a> was founded in 1927 by Bennett Cerf and Donald Klopfer, two years after they acquired the Modern Library imprint from publisher Horace Liveright, which reprints classic works of literature. Cerf is quoted as saying, "We just said we were going to publish a few books on the side at random," which suggested the name Random House.
 </p><p>
