--- a/SimonAndSchuster/SimonAndSchuster.html
+++ b/SimonAndSchuster/SimonAndSchuster.html
@@ -160,7 +160,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Simon & Schuster, a subsidiary of ViacomCBS, is an American publishing company founded in New York City in 1924 by Richard L. Simon and M. Lincoln Schuster. It is one of the Big Six English-language publishing companies, alongside <a href="https://www.grandcentralpublishing.com/">Grand Central</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Penguin Random House</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>.
+Simon & Schuster, a subsidiary of ViacomCBS, is an American publishing company founded in New York City in 1924 by Richard L. Simon and M. Lincoln Schuster. It is one of the Big Six English-language publishing companies, alongside <a href="../WarnerBooks/WarnerBooks.html">Grand Central (Warner Books)</a>, <a href="../HarperCollins/HarperCollins.html">Harper Collins</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Random House (Penguin)</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>.
 </p><p>
 </p><p>
 Titles
