--- a/WarnerBooks/WarnerBooks.html
+++ b/WarnerBooks/WarnerBooks.html
@@ -31,6 +31,33 @@
 <div class="mySlides" style="text-align: center;"><img src="WarnerBooks11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WarnerBooks12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WarnerBooks13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarnerBooks40.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -40,7 +67,7 @@
 </p><p>
 Warner Books began in 1970 with the acquisition of Paperback Library from Coronet Communications. In 1972 the name of the paperback line was changed to Warner Paperback Library and the name Warner Books was taken as the name for the entire publishing company. They became Time Warner after May 1990 after the merger with Time/Life, then AOL Time Warner in 2002 after the merger with America Online, and then again Time Warner in 2004. In March 2006, Warner Books was sold to Hachette Livre, who renamed it Grand Central Publishing.
 </p><p> 
-Grand Central Publishing one of the big-six publishing companies, along with <a href="../HarperCollins/HarperCollins.html">Harper Collins</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Penguin Random House</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>, and <a href="../SimonSchuster/SimonSchuster.html">Simon & Schuster</a>.
+Grand Central Publishing one of the big-six publishing companies, along with <a href="../HarperCollins/HarperCollins.html">Harper Collins</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Random House (Penguin)</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>, <a href="../SimonAndSchuster/SimonAndSchuster.html">Simon & Schuster</a>.
 </p><p>
 Titles
 </p><p>
