--- a/HarperCollins/HarperCollins.html
+++ b/HarperCollins/HarperCollins.html
@@ -27,7 +27,7 @@
 </p><p>
 <a href="https://www.harpercollins.com/">Harper Collins Website</a>
 </p><p>
-HarperCollins Publishers LLC since 1817, is one of the world's largest publishing companies and is one of the Big Six English-language publishing companies, alongside <a href="https://www.grandcentralpublishing.com/">Grand Central</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Penguin Random House</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>, and <a href="../SimonSchuster/SimonSchuster.html">Simon & Schuster</a>. The company is headquartered in New York City and is a subsidiary of News Corp. 
+HarperCollins Publishers LLC since 1817, is one of the world's largest publishing companies and is one of the Big Six English-language publishing companies, alongside <a href="../WarnerBooks/WarnerBooks.html">Grand Central (Warner Books)</a>, <a href="../Macmillan/Macmillan.html">Macmillan</a>, <a href="../RandomHouse/RandomHouse.html">Random House (Penguin)</a>, <a href="../Scholastic/Scholastic.html">Scholastic</a>, and <a href="../SimonAndSchuster/SimonAndSchuster.html">Simon & Schuster</a>. The company is headquartered in New York City and is a subsidiary of News Corp. 
 </p><p>
 Titles
 </p><p>
